default/objects/Non_Standard_Requirement__c/Non_Standard_Requirement__c.object-meta.xml
<CustomObject>
    <label>Non Standard Requirement</label>
    <nameField>
        <label>Non Standard Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Standard Requirements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>