default/objects/Non_Standard_Requirement__c/fields/Expected_Design_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Design_Response_Date__c</fullName>
    <label>Expected Design Response Date</label>
    <type>DateTime</type>
</CustomField>