default/objects/Non_Standard_Requirement__c/fields/Expected_Sales_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Response_Date__c</fullName>
    <label>Expected Sales Response Date</label>
    <type>DateTime</type>
</CustomField>