default/objects/Non_Standard_Requirement__c/fields/Final_Comment_From_Design__c.field-meta.xml
<CustomField>
    <fullName>Final_Comment_From_Design__c</fullName>
    <label>Final Comment From Design</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>