default/objects/Non_Standard_Requirement__c/fields/Final_Comments_From_SA__c.field-meta.xml
<CustomField>
    <fullName>Final_Comments_From_SA__c</fullName>
    <label>Final Comments From SA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>