default/objects/Non_Standard_Requirement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Non Standard Requirements</relationshipLabel>
    <relationshipName>Non_Standard_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>