default/objects/Non_Standard_Requirement__c/listViews/Design_Users_Non_Standard_Requirement.listView-meta.xml
<ListView>
    <fullName>Design_Users_Non_Standard_Requirement</fullName>
    <filterScope>Queue</filterScope>
    <label>Design Users</label>
    <queue>Design_Users</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>