default/objects/Non_Standard_Requirement__c/listViews/Sales_Admin_Non_Standard_Requirement.listView-meta.xml
<ListView>
    <fullName>Sales_Admin_Non_Standard_Requirement</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Admin</label>
    <queue>Sales_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>